# gst-rknninference

./: meson.build  meson_options.txt
src/: gstrknnclassifier.c  gstrknnclassifier.h  gstrknnclassifiertensordec.c  gstrknnclassifiertensordec.h  gstrknninference.c  gstrknninference.h  gstrknnobjectdetector.c  gstrknnobjectdetector.h  gstrknnplugin.c  gstrknntensormeta.c  gstrknntensormeta.h  gstrknnyolov5tensordec.c  gstrknnyolov5tensordec.h  gstrknnyolov8tensordec.c  gstrknnyolov8tensordec.h  meson.build  rga_preprocess.c  rga_preprocess.h  rknn_labels.c  rknn_labels.h  rknn_wrapper.c  rknn_wrapper.h  yolo_postprocess.c  yolo_postprocess.h
